# GREAT

./: .gitignore  README.md  pyproject.toml
doc/: .buildinfo  blog.html  index.html  index.md  intro.html  make.bat
doc/_modules/great/: utils.html
docs/: conf.py  index.md  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_modules/: index.html
docs/_modules/great/: crypto.html  image_tools.html  pres_maker.html
docs/_sources/: index.rst.txt  intro.md.txt
great/: __init__.py  bib_hacker.py  clipboard_convert.py  crypto.py  doc_maker.py  image_tools.py  list_table_convert.py  maker.py  markdown_make.py  pres_maker.py  scripts.py  simple_maker.py  utils.py  watcher.py  word_tools.py
source/: code.rst  conf.py  index.rst  intro.md
